cov/tests/test262/test/language/statements/class/definition/methods-restricted-properties/code.js
"use strict";
// Copyright (C) 2017 Ecma International.  All rights reserved.
// This code is governed by the BSD license found in the LICENSE file.
/*---
description: |
    Collection of assertion functions used throughout test262
defines: [assert]
---*/


function assert(mustBeTrue, message) {
  if (mustBeTrue === true) {
    return;
  }

  if (message === undefined) {
    message = 'Expected true but got ' + assert._toString(mustBeTrue);
  }
  throw new Test262Error(message);
}

assert._isSameValue = function (a, b) {
  if (a === b) {
    // Handle +/-0 vs. -/+0
    return a !== 0 || 1 / a === 1 / b;
  }

  // Handle NaN vs. NaN
  return a !== a && b !== b;
};

assert.sameValue = function (actual, expected, message) {
  try {
    if (assert._isSameValue(actual, expected)) {
      return;
    }
  } catch (error) {
    throw new Test262Error(message + ' (_isSameValue operation threw) ' + error);
    return;
  }

  if (message === undefined) {
    message = '';
  } else {
    message += ' ';
  }

  message += 'Expected SameValue(«' + assert._toString(actual) + '», «' + assert._toString(expected) + '») to be true';

  throw new Test262Error(message);
};

assert.notSameValue = function (actual, unexpected, message) {
  if (!assert._isSameValue(actual, unexpected)) {
    return;
  }

  if (message === undefined) {
    message = '';
  } else {
    message += ' ';
  }

  message += 'Expected SameValue(«' + assert._toString(actual) + '», «' + assert._toString(unexpected) + '») to be false';

  throw new Test262Error(message);
};

assert.throws = function (expectedErrorConstructor, func, message) {
  var expectedName, actualName;
  if (typeof func !== "function") {
    throw new Test262Error('assert.throws requires two arguments: the error constructor ' +
      'and a function to run');
    return;
  }
  if (message === undefined) {
    message = '';
  } else {
    message += ' ';
  }

  try {
    func();
  } catch (thrown) {
    if (typeof thrown !== 'object' || thrown === null) {
      message += 'Thrown value was not an object!';
      throw new Test262Error(message);
    } else if (thrown.constructor !== expectedErrorConstructor) {
      expectedName = expectedErrorConstructor.name;
      actualName = thrown.constructor.name;
      if (expectedName === actualName) {
        message += 'Expected a ' + expectedName + ' but got a different error constructor with the same name';
      } else {
        message += 'Expected a ' + expectedName + ' but got a ' + actualName;
      }
      throw new Test262Error(message);
    }
    return;
  }

  message += 'Expected a ' + expectedErrorConstructor.name + ' to be thrown but no exception was thrown at all';
  throw new Test262Error(message);
};

assert._toString = function (value) {
  try {
    if (value === 0 && 1 / value === -Infinity) {
      return '-0';
    }

    return String(value);
  } catch (err) {
    if (err.name === 'TypeError') {
      return Object.prototype.toString.call(value);
    }

    throw err;
  }
};

// Copyright (c) 2012 Ecma International.  All rights reserved.
// This code is governed by the BSD license found in the LICENSE file.
/*---
description: |
    Provides both:

    - An error class to avoid false positives when testing for thrown exceptions
    - A function to explicitly throw an exception using the Test262Error class
defines: [Test262Error, $DONOTEVALUATE]
---*/


function Test262Error(message) {
  this.message = message || "";
}

Test262Error.prototype.toString = function () {
  return "Test262Error: " + this.message;
};

Test262Error.thrower = (message) => {
  throw new Test262Error(message);
};

function $DONOTEVALUATE() {
  throw "Test262: This statement should not be evaluated.";
}

// Copyright (C) 2015 Caitlin Potter. All rights reserved.
// This code is governed by the BSD license found in the LICENSE file.

/*---
description: >
    Functions created using MethodDefinition syntactic form do not have own
    properties "caller" or "arguments", but inherit them from
    %FunctionPrototype%.
es6id: 16.1
---*/

class Class {
  method() {}
  get accessor() {}
  set accessor(x) {}
};

var instance = new Class;
var accessor = Object.getOwnPropertyDescriptor(Class.prototype, "accessor");

assert.sameValue(
  instance.method.hasOwnProperty('caller'),
  false,
  'No "caller" own property (method)'
);
assert.sameValue(
  instance.method.hasOwnProperty('arguments'),
  false,
  'No "arguments" own property (method)'
);
assert.sameValue(
  accessor.get.hasOwnProperty('caller'),
  false,
  'No "caller" own property ("get" accessor)'
);
assert.sameValue(
  accessor.get.hasOwnProperty('arguments'),
  false,
  'No "arguments" own property ("get" accessor)'
);
assert.sameValue(
  accessor.set.hasOwnProperty('caller'),
  false,
  'No "caller" own property ("set" accessor)'
);
assert.sameValue(
  accessor.set.hasOwnProperty('arguments'),
  false,
  'No "arguments" own property ("set" accessor)'
);

// --- Test method restricted properties throw

assert.throws(TypeError, function() {
  return instance.method.caller;
});

assert.throws(TypeError, function() {
  instance.method.caller = {};
});

assert.throws(TypeError, function() {
  return instance.method.arguments;
});

assert.throws(TypeError, function() {
  instance.method.arguments = {};
});

// --- Test getter restricted properties throw

assert.throws(TypeError, function() {
  return accessor.get.caller;
});

assert.throws(TypeError, function() {
  accessor.get.caller = {};
});

assert.throws(TypeError, function() {
  return accessor.get.arguments;
});

assert.throws(TypeError, function() {
  accessor.get.arguments = {};
});

// --- Test setter restricted properties throw

assert.throws(TypeError, function() {
  return accessor.set.caller;
});

assert.throws(TypeError, function() {
  accessor.set.caller = {};
});

assert.throws(TypeError, function() {
  return accessor.set.arguments;
});

assert.throws(TypeError, function() {
  accessor.set.arguments = {};
});

